Fix CSS bug in coappearance chapter view.
With some window sizes, the Bootstrap responsive layout would shrink width and leave the coappearance graph (which is constant-size) extending out of its well. At small sizes, the visualization is too crowded and the text too small to be readable anyway, so I just made it invisible on screens/windows below 768 px in size. I altered bootstrap-responsive.min.css to remove some of the logic for window sizes between 768 and 980 px in width (to enable the content to scroll horizontally if needed at window sizes between 768 and 1200 instead of being resized).

--- a/assets/css/coappear/chapter.css
+++ b/assets/css/coappear/chapter.css
@@ -1,4 +1,4 @@
-/* cloack dynamically-loaded angular.js elements until they're ready */
+/* cloak dynamically-loaded angular.js elements until they're ready */
 [ng\:cloak], [ng-cloak], .ng-cloak {
   display: none !important;
 }
@@ -6,6 +6,25 @@
 body {
 	padding-top: 60px;
 	padding-bottom: 40px;
+}
+
+#stack-well {
+  height: 720px;
+  overflow-y: auto;
+}
+
+/* on screens below 768px-wide, hide the coappearance graph altogether*/
+@media(max-width:767px) {
+  #chart-area {
+    visibility: hidden;
+    width: 0px;
+    height: 0px;
+  }
+}
+@media(min-width:768px) {
+  #chart-area {
+    visibility: visible;
+  }
 }
 
 #char-stats-area {
